[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Minigame1/MenuMinigame3D/MenuFade.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Minigame1/Font/ALBAS___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Minigame1/MenuMinigame3D/Player1.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Minigame1/MenuMinigame3D/Player2.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Minigame1/MenuMinigame3D/Guide.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Minigame1/MenuMinigame3D/Quit.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Minigame1/MenuMinigame3D/Pointer3DMenu.gd" type="Script" id=7]
[ext_resource path="res://Audio/confirm3D.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/reject3D.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/changeSelection3D.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Menu3DMusic.wav" type="AudioStream" id=11]
[ext_resource path="res://Scenes/Minigame1/MenuMinigame3D/Background.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1964.0
margin_bottom = 1096.0
color = Color( 0.113725, 0.0235294, 0.223529, 0 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -479.0
margin_right = 479.0
margin_bottom = 431.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 958.0
margin_bottom = 1014.0
custom_constants/separation = 100

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 958.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "SUMO BALL 3D"

[node name="Selection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 958.0
margin_bottom = 1014.0
custom_constants/separation = 15

[node name="Player1" type="Label" parent="MarginContainer/VBoxContainer/Selection"]
margin_right = 958.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 2 )
text = "1 PLAYER"
align = 1
script = ExtResource( 3 )

[node name="Player2" type="Label" parent="MarginContainer/VBoxContainer/Selection"]
margin_top = 173.0
margin_right = 958.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 2 )
text = "2 PLAYERS"
align = 1
script = ExtResource( 4 )

[node name="Guide" type="Label" parent="MarginContainer/VBoxContainer/Selection"]
margin_top = 346.0
margin_right = 958.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 2 )
text = "GUIDE"
align = 1
script = ExtResource( 5 )

[node name="Quit" type="Label" parent="MarginContainer/VBoxContainer/Selection"]
margin_top = 519.0
margin_right = 958.0
margin_bottom = 677.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"
align = 1
script = ExtResource( 6 )

[node name="Pointer3DMenu" type="Sprite" parent="MarginContainer/VBoxContainer/Selection"]
script = ExtResource( 7 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Selection/Pointer3DMenu"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = " ---"

[node name="Sounds" type="Node" parent="MarginContainer/VBoxContainer/Selection/Pointer3DMenu"]

[node name="confirmOption" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/Selection/Pointer3DMenu/Sounds"]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="rejectOption" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/Selection/Pointer3DMenu/Sounds"]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="changeOption" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/Selection/Pointer3DMenu/Sounds"]
stream = ExtResource( 10 )
volume_db = -15.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0
autoplay = true

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource( 12 )
